updated video and favicon

--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
 
             <a
-              href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"
+              href="http://re8yvv6fy.bkt.gdipper.com/Hitailor.mp4"
               type="button"
               class="popup-button text-center big"
             >
