--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
             </div>
 
             <a
-              href="https://youtu.be/Rz_O-qE1TA8"
+              href="https://www.youtube.com/watch?v=Rz_O-qE1TA8"
               type="button"
               class="popup-button text-center big"
             >
